--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["Python Practicum TUM 2022"]
 [tool.poetry.dependencies]
 python = "^3.9"
 hypothesis = "^6.48.1"
+pytest-cov = "^3.0.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
