attempt applying a poetry finding fix for the new CI runner

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,6 +14,7 @@ testing:
   stage: test
   script:
     - echo "This is the test stage"
+    - export PATH="$HOME/.poetry/bin:$PATH"
     - poetry run pytest
     - coverage run -m pytest --junitxml=report.xml
     - coverage report
