--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,7 @@ stages:
 
 before_script:
   - pip install poetry
-  - export PATH="$HOME/.poetry/bin:$PATH"
+  - export PATH="$HOME/.local/bin:$HOME/bin:$PATH"
   - poetry install
   - source `poetry env info --path`/bin/activate
 
