--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,6 +20,7 @@ pytest:
     - echo "This is the pytest test stage"
     - pytest --junitxml=report.xml
   artifacts:
+    name: "$CI_JOB_NAME"
     when: always
     reports:
       junit: report.xml
@@ -28,24 +29,29 @@ coverage:
   stage: test
   script:
     - echo "This is coverage test stage"
-#    - coverage run -m pytest --junitxml=report.xml
-    - coverage run -m pytest
+    - coverage run -m pytest --junitxml=report.xml
+#    - coverage run -m pytest
     - coverage report
     - coverage xml
   coverage: '/(?i)total.*? (100(?:\.0+)?\%|[1-9]?\d(?:\.\d+)?\%)$/'
   artifacts:
+    name: "$CI_JOB_NAME"
     when: always
     reports:
       coverage_report:
         coverage_format: cobertura
         path: coverage.xml
 
+prospector:
+  stage: linter
+  script:
+    - prospector -w mypy -w bandit
 
 publishing:
   stage: publish
 #  needs: [testing]
   script:
-    - echo "This is the build stage"
+    - echo "This is the publish stage"
     - poetry config repositories.gitlab https://gitlab.lrz.de/api/v4/projects/$CI_PROJECT_ID/packages/pypi
     - poetry config http-basic.gitlab gitlab-ci-token "$CI_JOB_TOKEN"
     - poetry publish -r gitlab --build
