add only to run only when there are changes

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,13 +24,16 @@ pytest:
     when: always
     reports:
       junit: report.xml
+  only:
+    changes:
+      - metamorphic_test/**/*
+      - tests/**/*
 
 coverage:
   stage: test
   script:
     - echo "This is coverage test stage"
-    - coverage run -m pytest --junitxml=report.xml
-#    - coverage run -m pytest
+    - coverage run -m pytest
     - coverage report
     - coverage xml
   coverage: '/(?i)total.*? (100(?:\.0+)?\%|[1-9]?\d(?:\.\d+)?\%)$/'
@@ -41,15 +44,25 @@ coverage:
       coverage_report:
         coverage_format: cobertura
         path: coverage.xml
+  only:
+    changes:
+      - metamorphic_test/**/*
+      - tests/**/*
 
 prospector:
   stage: linter
   script:
+    - echo "This is prospector linter stage"
     - prospector -w mypy -w bandit
+  only:
+    changes:
+      - metamorphic_test/**/*
+      - tests/**/*
+  allow_failure: true  # maybe remove later
 
 publishing:
   stage: publish
-#  needs: [testing]
+  needs: [linter]
   script:
     - echo "This is the publish stage"
     - poetry config repositories.gitlab https://gitlab.lrz.de/api/v4/projects/$CI_PROJECT_ID/packages/pypi
