--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,74 +1,82 @@
 default:
-  image: python:3.8
-  before_script:  # poetry virtual env initialization
-    - pip install poetry
-    - export PATH="$HOME/.local/bin:$HOME/bin:$PATH"
-    - poetry install --no-ansi --no-interaction
-    - source `poetry env info --path`/bin/activate
-
-variables:
-  LANG: C.UTF-8
+    image: python:3.8
+    before_script:  # poetry virtual env initialization
+        - pip install poetry
+        - export PATH="$HOME/.local/bin:$HOME/bin:$PATH"
+        - poetry install --no-ansi --no-interaction
+        - source `poetry env info --path`/bin/activate
 
 stages:
-  - test
-  - linter
-  - publish
+    - test
+    - linter
+    - publish
+
+include:
+    - template: Code-Quality.gitlab-ci.yml
+
+variables:
+    LANG: C.UTF-8
 
 pytest:
-  stage: test
-  script:
-    - echo "This is the pytest test stage"
-    - pytest --junitxml=report.xml
-  artifacts:
-    name: "$CI_JOB_NAME"
-    when: always
-    reports:
-      junit: report.xml
-  only:
-    changes:
-      - metamorphic_test/**/*
-      - tests/**/*
+    stage: test
+    script:
+        - echo "This is the pytest test stage"
+        - pytest --junitxml=report.xml
+    artifacts:
+        name: "$CI_JOB_NAME"
+        when: always
+        reports:
+            junit: report.xml
+    only:
+        changes:
+            - metamorphic_test/**/*
+            - tests/**/*
 
 coverage:
-  stage: test
-  script:
-    - echo "This is coverage test stage"
-    - coverage run -m pytest
-    - coverage report
-    - coverage xml
-  coverage: '/(?i)total.*? (100(?:\.0+)?\%|[1-9]?\d(?:\.\d+)?\%)$/'
-  artifacts:
-    name: "$CI_JOB_NAME"
-    when: always
-    reports:
-      coverage_report:
-        coverage_format: cobertura
-        path: coverage.xml
-  only:
-    changes:
-      - metamorphic_test/**/*
-      - tests/**/*
+    stage: test
+    script:
+        - echo "This is coverage test stage"
+        - coverage run -m pytest
+        - coverage report
+        - coverage xml
+    coverage: '/(?i)total.*? (100(?:\.0+)?\%|[1-9]?\d(?:\.\d+)?\%)$/'
+    artifacts:
+        name: "$CI_JOB_NAME"
+        when: always
+        reports:
+            coverage_report:
+                coverage_format: cobertura
+                path: coverage.xml
+    only:
+        changes:
+            - metamorphic_test/**/*
+            - tests/**/*
+
+code_quality:
+    stage: test
+    artifacts:
+        paths: [gl-code-quality-report.json]
 
 prospector:
-  stage: linter
-  script:
-    - echo "This is prospector linter stage"
-    - prospector -w mypy -w bandit
-  only:
-    changes:
-      - metamorphic_test/**/*
-      - tests/**/*
-  allow_failure: true  # maybe remove later
+    stage: linter
+    script:
+        - echo "This is prospector linter stage"
+        - prospector -w mypy -w bandit
+    only:
+        changes:
+            - metamorphic_test/**/*
+            - tests/**/*
+    allow_failure: true  # maybe remove later
 
 publishing:
-  stage: publish
-  needs: [prospector]
-  script:
-    - echo "This is the publish stage"
-    - poetry config repositories.gitlab https://gitlab.lrz.de/api/v4/projects/$CI_PROJECT_ID/packages/pypi
-    - poetry config http-basic.gitlab gitlab-ci-token "$CI_JOB_TOKEN"
-    - poetry publish -r gitlab --build
-    - echo "Publishing done!"
-  only:
-    - main
-  when: manual
+    stage: publish
+    needs: [prospector]
+    script:
+        - echo "This is the publish stage"
+        - poetry config repositories.gitlab https://gitlab.lrz.de/api/v4/projects/$CI_PROJECT_ID/packages/pypi
+        - poetry config http-basic.gitlab gitlab-ci-token "$CI_JOB_TOKEN"
+        - poetry publish -r gitlab --build
+        - echo "Publishing done!"
+    only:
+        - main
+    when: manual
