make sure all works

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,10 +27,10 @@ pytest:
         when: always
         reports:
             junit: report.xml
-    only:
-        changes:
-            - metamorphic_test/**/*
-            - tests/**/*
+#    only:
+#        changes:
+#            - metamorphic_test/**/*
+#            - tests/**/*
 
 coverage:
     stage: test
@@ -47,10 +47,10 @@ coverage:
             coverage_report:
                 coverage_format: cobertura
                 path: coverage.xml
-    only:
-        changes:
-            - metamorphic_test/**/*
-            - tests/**/*
+#    only:
+#        changes:
+#            - metamorphic_test/**/*
+#            - tests/**/*
 
 code_quality:
     stage: test
@@ -64,10 +64,10 @@ prospector:
     script:
         - echo "This is prospector linter stage"
         - prospector -w mypy -w bandit
-    only:
-        changes:
-            - metamorphic_test/**/*
-            - tests/**/*
+#    only:
+#        changes:
+#            - metamorphic_test/**/*
+#            - tests/**/*
 #    allow_failure: true  # maybe remove later
 
 publishing:
