working housing price tests

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = ""
 authors = ["Python Practicum TUM 2022"]
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = "=3.8,<3.11"
 hypothesis = "^6.48.1"
 pytest = "^7.1.2"
 
@@ -13,6 +13,10 @@ pytest = "^7.1.2"
 mypy = "^0.961"
 pytest-cov = "^3.0.0"
 prospector = {extras = ["with_mypy", "with_bandit"], version = "^1.7.7"}
+numpy = "^1.23.0"
+pandas = "^1.4.3"
+pandas-stubs = "^1.4.3"
+sklearn = "^0.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
