--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,10 @@ version = "0.1.3"
 description = ""
 authors = ["Python Practicum TUM 2022"]
 
+[tool.poetry.scripts]
+cov = "scripts.cov:html_coverage"
+lint = "scripts.lint:lint"
+
 [tool.poetry.dependencies]
 python = "=3.8,<3.11"
 hypothesis = "^6.48.1"
