--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,10 @@ librosa = "^0.9.2"
 torch = "^1.12.0"
 torchaudio = "^0.12.0"
 torchvision = "^0.13.0"
+omegaconf = "^2.2.2"
+audiomentations = "^0.25.1"
+SoundFile = "^0.10.3"
+pyloudnorm = "^0.1.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
