--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,7 @@
 default:
     image: python:3.8
     before_script:  # poetry virtual env initialization
+        - sudo apt-get install libsndfile1
         - pip install poetry
         - export PATH="$HOME/.local/bin:$HOME/bin:$PATH"
         - poetry install --no-ansi --no-interaction
