--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ authors = ["Python Practicum TUM 2022"]
 cov = "scripts.cov:html_coverage"
 install-hook = "scripts.install_hook:install_hook"
 lint = "prospector.run:main"
+test = "scripts.run_tests:run_tests"
+example = "scripts.run_tests:run_example"
 
 [tool.poetry.dependencies]
 python = ">=3.8,<3.11"
