fix errors in CI config

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -50,7 +50,7 @@ prospector:
 
 publishing:
     stage: publish
-    needs: [coverage, prospector]
+    needs: [pytest, prospector]
     script:
         - echo "This is the publish stage"
         - poetry config repositories.gitlab https://gitlab.lrz.de/api/v4/projects/$CI_PROJECT_ID/packages/pypi
@@ -63,19 +63,19 @@ publishing:
 
 
 simple_example:
-    stage: example
+    stage: examples
     allow_failure: true
     script:
         - poetry run example simple
 
 trigonometry_example:
-    stage: example
+    stage: examples
     allow_failure: true
     script:
         - poetry run example trigonometry
 
 house_pricing_example:
-    stage: example
+    stage: examples
     allow_failure: true
     script:
         - poetry run example house_pricing
