--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ numpy = "^1.23.0"
 pandas = "^1.4.3"
 pandas-stubs = "^1.4.3"
 sklearn = "^0.0"
+pytest-html = "^3.1.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
