--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,9 +22,9 @@ mypy = "^0.961"
 pytest-cov = "^3.0.0"
 prospector = {extras = ["with_mypy", "with_bandit"], version = "^1.7.7"}
 # librosa = "^0.9.2"
-# torch = "^1.12.0"
+torch = "^1.12.0"
 # torchaudio = "^0.12.0"
-# torchvision = "^0.13.0"
+torchvision = "^0.13.0"
 omegaconf = "^2.2.2"
 # audiomentations = "^0.25.1"
 # SoundFile = "^0.10.3"
@@ -37,6 +37,7 @@ pytest-html = "^3.1.1"
 jiwer = "^2.3.0"
 albumentations = "^1.2.1"
 Dijkstar = "^2.6.0"
+matplotlib = "^3.5.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
