--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ sklearn = "^0.0"
 jiwer = "^2.3.0"
 albumentations = "^1.2.1"
 Dijkstar = "^2.6.0"
+matplotlib = "^3.5.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
