--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ numpy = "^1.23.0"
 pandas = "^1.4.3"
 pandas-stubs = "^1.4.3"
 sklearn = "^0.0"
+pytest-html = "^3.1.1"
 jiwer = "^2.3.0"
 albumentations = "^1.2.1"
 Dijkstar = "^2.6.0"
