--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ python = ">=3.8,<3.11"
 hypothesis = "^6.49.1"
 pytest = "^7.1.2"
 wrapt = "^1.14.1"
+Flask = "^2.1.3"
 
 [tool.poetry.dev-dependencies]
 mypy = "^0.961"
