--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,7 @@ jiwer = "^2.3.0"
 albumentations = "^1.2.1"
 Dijkstar = "^2.6.0"
 matplotlib = "^3.5.2"
+torchlibrosa = "^0.0.9"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
