--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,9 @@ albumentations = "^1.2.1"
 Dijkstar = "^2.6.0"
 matplotlib = "^3.5.2"
 
+[tool.mypy]
+plugins = "numpy.typing.mypy_plugin"
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
